# chasm

./: .gitattributes  .gitignore  Cargo.toml  README.md  start-chasm.bat
.github/workflows/: nightly.yml
apps/chasm/: Cargo.toml
apps/chasm-desktop/: Cargo.toml  README.md  tauri.conf.json
apps/chasm-desktop/icons/: icon.icns
apps/chasm-desktop/src/: lib.rs  main.rs
apps/chasm/src/: main.rs
crates/chasm-core/: Cargo.toml
crates/chasm-core/src/: game_launcher.rs  hotkeys.rs  lib.rs  profile_import.rs  profiles.rs  providers.rs  request_trace.rs  settings.rs  system_info.rs
crates/chasm-embed/: Cargo.toml
crates/chasm-embed/examples/: rag_eval.rs
crates/chasm-embed/src/: lib.rs
crates/chasm-fnv-bridge/: Cargo.toml
crates/chasm-fnv-bridge/src/: actions.rs  admin.rs  chasm.rs  config.rs  events.rs  lib.rs  main.rs  npc.rs  protocol.rs  replay.rs  saves.rs  sink.rs  stt.rs  trace.rs
crates/chasm-prompt/: Cargo.toml
crates/chasm-prompt/src/: action_book_injection.rs  lib.rs  lore_injection.rs  macros.rs  scenario.rs  scenario_variants.rs
crates/chasm-prompt/tests/: agent_loop.rs  enum_ab.rs  find_action_rank.rs  guess_snap.rs  loot_battery.rs
crates/chasm-st-compat/: Cargo.toml
crates/chasm-st-compat/src/: action_books.rs  journal.rs  lib.rs  lorebooks.rs  relationships.rs  skills.rs  sources.rs
crates/chasm-web/: Cargo.toml  askama.toml
crates/chasm-web/src/: books.rs  capture.rs  connection.rs  event_log.rs  fnv_bridge.rs  game_bridge.rs  gamemaster.rs  generate.rs  journal.rs  launcher.rs  lib.rs  llm.rs  llm_api.rs  movement.rs  music.rs  orchestrator.rs  persona.rs  raw_chat.rs  save_sync.rs  scheduler.rs  skill_creator.rs  skill_executor.rs  stack_lifecycle.rs  stt_api.rs  stt_vocab.rs  trace_routes.rs  tts_api.rs  ui.rs  warmup.rs  witness.rs
crates/chasm-web/src/ui/: books.rs  bridge.rs  chat.rs  companions.rs  config.rs  gamestate.rs  globals.rs  hotkeys.rs  journals.rs  models.rs  persona.rs  profiles.rs  providers.rs  relationships.rs  scheduler.rs  settings.rs  skills.rs  system.rs  travel.rs
crates/chasm-web/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/chasm-web/ui/src/: App.tsx  index.css  main.tsx
crates/chasm-web/ui/src/components/: ApiProviderConfig.tsx  AppShell.tsx  Book.tsx  ConnectionPill.tsx  InstalledModelSelector.tsx  ModelPicker.tsx  ModelPlacement.tsx  ProviderPicker.tsx  RuntimeStatus.tsx  StackControls.tsx
crates/chasm-web/ui/src/components/ui/: button.tsx  card.tsx  page.tsx  settings-page.tsx  switch.tsx
crates/chasm-web/ui/src/lib/: nav.tsx  theme.ts  useProvider.ts  utils.ts
crates/chasm-web/ui/src/lib/api/: books.ts  chat.ts  companions.ts  config.ts  events.ts  gamestate.ts  globals.ts  http.ts  index.ts  journals.ts  models.ts  persona.ts  providers.ts  relationships.ts  scheduler.ts  skills.ts  system.ts  travel.ts  triggers.ts  tts.ts
crates/chasm-web/ui/src/screens/: Chat.tsx  ComingSoon.tsx  Companions.tsx  Events.tsx  Gamestate.tsx  Globals.tsx  InterfaceSettings.tsx  Journals.tsx  Persona.tsx  Relationships.tsx  Schedule.tsx  Skills.tsx  Travel.tsx  Triggers.tsx
crates/chasm-web/ui/src/screens/books/: ActionBook.tsx  CharactersBook.tsx  LoreBook.tsx  QuestBook.tsx  badge.tsx
crates/chasm-web/ui/src/screens/settings/: Bridge.tsx  Hotkeys.tsx  Llm.tsx  Music.tsx  Profiles.tsx  Retrieval.tsx  Runtimes.tsx  Stt.tsx  SttBoost.tsx  Tracing.tsx  Tts.tsx  Updates.tsx
crates/chasm-web/ui/src/store/: ui.ts
docs/: building-a-bridge-mod.md  fnv-bridge-rust-port.md  generation-parity-diff.md  generation-parity-reference.md  retired-node-bridge.md
migrations/: 0001_foundation.sql
profiles/fallout-new-vegas/: profile.json
scripts/: acestep_music_server.py  build_parity_doc.py  clone-voices.ps1  download-embed-model.ps1  download-koboldcpp.ps1  download-llamacpp.ps1  download-llm.ps1  ensure-uv.ps1  install-engine.ps1  llm_capture_proxy.py  parakeet_stt_server.py  pockettts_server.py  qwen3_tts_server.py  setup-mo2.ps1  stt_vocab_boost.py  test_parakeet_server_integration.py  test_stt_vocab_boost.py  tts_clone.py
scripts/patches/: qwen3-cuda-graph-fast-path.patch
static/: app.css  app.js
templates/: action_book.html  action_book_editor.html  layout.html  live_chat.html  lorebook_editor.html  quest_book.html  quest_book_editor.html  settings.html  tracing.html
templates/partials/: character_list.html  message_list.html  prompt_panel.html  voice_clone.html
tools/uv/: README.md
