[package]
name = "chasm-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
description = "chasm desktop shell — Tauri window + system tray around the in-process axum backend"

[lib]
# Tauri's mobile-ready layout keeps the app entry point in a lib so the same code
# can drive desktop and (future) mobile targets. The desktop bin is a thin shim.
name = "chasm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chasm-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chasm-core = { path = "../../crates/chasm-core" }
chasm-web = { path = "../../crates/chasm-web" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[features]
# GPU retrieval by default (see apps/chasm/Cargo.toml).
default = ["cuda"]
cuda = ["chasm-web/cuda"]
