[package]
name = "chasm-embed"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
fastembed.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true

# Only needed to construct the CUDA execution provider (under the `cuda`
# feature). Pinned to the exact `ort` version `fastembed` uses so Cargo unifies
# them into one build. Optional + default-features=false so the CPU build never
# pulls it in.
[dependencies.ort]
version = "=2.0.0-rc.12"
default-features = false
optional = true

[features]
default = []
# Opt-in GPU acceleration for the ONNX (BGE) models. OFF by default so the
# workspace builds CPU-only with no CUDA toolkit present. When enabled,
# `Retriever::load` may select the CUDA execution provider at runtime if a
# capable GPU is detected; `ort` still falls back to CPU at session-build time
# if the GPU/driver is unusable. This enables `ort/cuda` directly (the ONNX
# runtime CUDA EP) rather than fastembed's `cuda` feature, which only adds
# candle GPU support for the native qwen3/nomic models we don't use.
cuda = ["dep:ort", "ort/cuda"]
