[package]
name = "chasm-fnv-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
name = "chasm_fnv_bridge"
path = "src/lib.rs"

[[bin]]
name = "chasm-fnv-bridge"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
notify.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
# Shared constants/types (e.g. `chasm_core::PLAY_SONG_ACTION_ID` for the play-a-song
# action, and the trace parser the tests round-trip). No cycle: chasm-core has no
# dependency on this crate.
chasm-core = { path = "../chasm-core" }
