[package]
name = "chasm-prompt"
version = "0.2.18"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
chasm-core = { path = "../chasm-core" }
chasm-embed = { path = "../chasm-embed" }
chasm-st-compat = { path = "../chasm-st-compat" }
