[package]
name = "chasm-prompt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
chasm-core = { path = "../chasm-core" }
chasm-embed = { path = "../chasm-embed" }
chasm-st-compat = { path = "../chasm-st-compat" }

[dev-dependencies]
# Tests build minimal PNG character cards (base64-encoded tEXt payloads).
base64.workspace = true
# The ignored enum_ab harness drives a live llama-server (blocking: tests are sync).
reqwest = { workspace = true, features = ["blocking"] }
