[package]
name = "chasm-st-compat"
version = "0.2.18"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
chasm-core = { path = "../chasm-core" }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

